--- a/html_projkt_wael_zobani/Untitled-1.css
+++ b/html_projkt_wael_zobani/Untitled-1.css
@@ -7,3 +7,137 @@
 body{
 	font-family: montserrat;
 }
+/* Start navigation-->*/
+
+nav{
+	background: #0082e6;
+	height: 80px;
+	width: 100%;
+}
+label.logo{
+	color: white;
+	font-size: 35px;
+	line-height: 80px;
+	padding: 0 100px;
+	font-weight: bold;
+}
+nav ul{
+	float: right;
+	margin-right: 20px;
+}
+nav ul li {
+	display: inline-block;
+	line-height: 80px;
+	margin: 0 5px;
+}
+nav ul li a{
+	color: white;
+	font-size: 17px;
+	padding: 7px 13px;
+	border-radius: 3px;
+	text-transform: uppercase;
+}
+
+a:hover{
+	background:#1b9bff ;
+	transform: .5s;
+
+}
+
+.click_hbfs{
+		font-size: 30px;
+	color: white;
+	float: right;
+	margin-right: 40px;
+	margin-top: 20px;
+	cursor: pointer;
+		display: none;
+
+
+}
+#click{
+	display: none;
+}
+
+/* End navigation-->*/
+
+section{
+
+    background: url(back.jpg) no-repeat;
+    background-size: cover;
+    height: calc(100vh - 80px);
+
+
+}
+
+
+/*slide start*/
+
+
+.slidershows{
+
+width: 700px;
+height: 400px;
+overflow: hidden;
+}
+.kbbz{
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%,-50%);
+}
+.navigations{
+position: absolute;
+bottom: 20px;
+left: 50%;
+transform: translateX(-50%);
+display: flex;
+}
+.soa{
+width: 50px;
+height: 10px;
+border: 2px solid #ffff;
+margin: 6px;
+cursor: pointer;
+transition: 0.4s;
+}
+.soa:hover{
+background: #fff;
+}
+
+input[name="r"]{
+position: absolute;
+visibility: hidden;
+}
+
+.slides{
+width: 500%;
+height: 100%;
+display: flex;
+}
+
+.slide{
+width: 20%;
+transition: 0.6s;
+}
+.slide img{
+width: 100%;
+height: 100%;
+}
+
+#r1:checked ~ .s1{
+margin-left: 0;
+}
+#r2:checked ~ .s1{
+margin-left: -20%;
+}
+#r3:checked ~ .s1{
+margin-left: -40%;
+}
+#r4:checked ~ .s1{
+margin-left: -60%;
+}
+#r5:checked ~ .s1{
+margin-left: -80%;
+}
+/* slide end*/
