--- a/html_projkt_wael_zobani/Untitled-1.css
+++ b/html_projkt_wael_zobani/Untitled-1.css
@@ -173,3 +173,78 @@ margin-left: -80%;
     
     /*Haupt End*/
     
+/*Footer Start*/
+
+
+	.ontainer{
+        max-width: 1170px;
+        margin:auto;
+    }
+    .footer2{
+        display: flex;
+        flex-wrap: wrap;
+    }
+    ul{
+        list-style: none;
+    }
+    .footer{
+        background-color: #24262b;
+        padding: 70px 0;
+    }
+    .footer3{
+       width: 25%;
+       padding: 0 15px;
+    }
+    .footer3 h4{
+        font-size: 18px;
+        color: #ffffff;
+        text-transform: capitalize;
+        margin-bottom: 35px;
+        font-weight: 500;
+        position: relative;
+    }
+    .footer3 h4::before{
+        content: '';
+        position: absolute;
+        left:0;
+        bottom: -10px;
+        background-color: #e91e63;
+        height: 2px;
+        box-sizing: border-box;
+        width: 50px;
+    }
+    .footer3 ul li:not(:last-child){
+        margin-bottom: 10px;
+    }
+    .footer3 ul li a{
+        font-size: 16px;
+        text-transform: capitalize;
+        color: #ffffff;
+        text-decoration: none;
+        font-weight: 300;
+        color: #bbbbbb;
+        display: block;
+        transition: all 0.3s ease;
+    }
+    .footer3 ul li a:hover{
+        color: #ffffff;
+        padding-left: 8px;
+    }
+    .footer3 .social-links a{
+        display: inline-block;
+        height: 40px;
+        width: 40px;
+        background-color: rgba(255,255,255,0.2);
+        margin:0 10px 10px 0;
+        text-align: center;
+        line-height: 40px;
+        border-radius: 50%;
+        color: #ffffff;
+        transition: all 0.5s ease;
+    }
+    .footer3 .social-links a:hover{
+        color: #24262b;
+        background-color: #ffffff;
+    }
+    
+    /*Footer End*/
